tests/cases/smoke/invalid/expr_in_operator.dp
var items: int[] = [1, 2]
var ok = 1 in items
